--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -1,3 +1,37 @@
-<!doctype html>
-<h1>Hello World!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="css/style.css">
+	<title>First Assignment</title>
+</head>
+<body>
+<h1>Our Menu</h1>
+
+<div class="row">
+  <div class="col-lg-4 col-md-6">
+  	<div id="container">
+  		<p id="p1">Chicken</p>
+  		<section>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec diam magna, dictum viverra orci sit amet, aliquet rhoncus purus. Donec nec faucibus magna, non elementum metus. Nunc interdum sollicitudin lacus, ut dictum turpis consectetur id. Ut pharetra condimentum sagittis. Cras vel facilisis lacus, a porta massa. Nullam tincidunt lorem non mi tempor porttitor.</section>
+  	
+  	</div>
+  </div>
+  <div class="col-lg-4 col-md-6">
+  	<div id="container">
+  		<p id="p2">Beef</p>
+  		<section>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec diam magna, dictum viverra orci sit amet, aliquet rhoncus purus. Donec nec faucibus magna, non elementum metus. Nunc interdum sollicitudin lacus, ut dictum turpis consectetur id. Ut pharetra condimentum sagittis. Cras vel facilisis lacus, a porta massa. Nullam tincidunt lorem non mi tempor porttitor.</section>
+  	</div>
+  </div>
+  <div class="col-lg-4 col-md-12">
+  	<div id="container">
+  		<p id="p3">Shushi</p>
+  		<section>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec diam magna, dictum viverra orci sit amet, aliquet rhoncus purus. Donec nec faucibus magna, non elementum metus. Nunc interdum sollicitudin lacus, ut dictum turpis consectetur id. Ut pharetra condimentum sagittis. Cras vel facilisis lacus, a porta massa. Nullam tincidunt lorem non mi tempor porttitor.</section>
+  	
+  	</div>
+  </div>
+
+</div>
+
+</body>
 </html>
